Bugfix - z-indexes

--- a/src/sass/layouts/_header.scss
+++ b/src/sass/layouts/_header.scss
@@ -246,7 +246,7 @@
 
 .search-input,
 .country-input {
-  // z-index: 1;
+  z-index: 5;
   cursor: pointer;
   border-radius: 20px;
   border: none;
@@ -292,7 +292,7 @@
 .select {
   width: 100%;
   position: relative;
-  z-index: 100;
+  z-index: 5;
 
   &.open {
     .select__dropdown {
